[package]
name = "bank-transfer"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
default = []

[dependencies]
anyhow = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw2 = { workspace = true }
nibiru-std = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
